syntax = "proto3";

package perpdex.perpdex.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "perpdex/perpdex/v1/params.proto";

option go_package = "perpdex/x/perpdex/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // CreatePrice defines the CreatePrice RPC.
  rpc CreatePrice(MsgCreatePrice) returns (MsgCreatePriceResponse);

  // UpdatePrice defines the UpdatePrice RPC.
  rpc UpdatePrice(MsgUpdatePrice) returns (MsgUpdatePriceResponse);

  // DeletePrice defines the DeletePrice RPC.
  rpc DeletePrice(MsgDeletePrice) returns (MsgDeletePriceResponse);

  // RequestLoan defines the RequestLoan RPC.
  rpc RequestLoan(MsgRequestLoan) returns (MsgRequestLoanResponse);

  // ApproveLoan defines the ApproveLoan RPC.
  rpc ApproveLoan(MsgApproveLoan) returns (MsgApproveLoanResponse);

  // CancelLoan defines the CancelLoan RPC.
  rpc CancelLoan(MsgCancelLoan) returns (MsgCancelLoanResponse);

  // RepayLoan defines the RepayLoan RPC.
  rpc RepayLoan(MsgRepayLoan) returns (MsgRepayLoanResponse);

  // LiquidateLoan defines the LiquidateLoan RPC.
  rpc LiquidateLoan(MsgLiquidateLoan) returns (MsgLiquidateLoanResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "perpdex/x/perpdex/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgCreatePrice defines the MsgCreatePrice message.
message MsgCreatePrice {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string symbol = 2;
  string price = 3;
}

// MsgCreatePriceResponse defines the MsgCreatePriceResponse message.
message MsgCreatePriceResponse {
  uint64 id = 1;
}

// MsgUpdatePrice defines the MsgUpdatePrice message.
message MsgUpdatePrice {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string symbol = 2;
  string price = 3;
  uint64 id = 4;
}

// MsgUpdatePriceResponse defines the MsgUpdatePriceResponse message.
message MsgUpdatePriceResponse {}

// MsgDeletePrice defines the MsgDeletePrice message.
message MsgDeletePrice {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}

// MsgDeletePriceResponse defines the MsgDeletePriceResponse message.
message MsgDeletePriceResponse {}

// MsgRequestLoan defines the MsgRequestLoan message.
message MsgRequestLoan {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string amount = 2;
  string fee = 3;
  string collateral = 4;
  string deadline = 5;
}

// MsgRequestLoanResponse defines the MsgRequestLoanResponse message.
message MsgRequestLoanResponse {}

// MsgApproveLoan defines the MsgApproveLoan message.
message MsgApproveLoan {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}

// MsgApproveLoanResponse defines the MsgApproveLoanResponse message.
message MsgApproveLoanResponse {}

// MsgCancelLoan defines the MsgCancelLoan message.
message MsgCancelLoan {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}

// MsgCancelLoanResponse defines the MsgCancelLoanResponse message.
message MsgCancelLoanResponse {}

// MsgRepayLoan defines the MsgRepayLoan message.
message MsgRepayLoan {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}

// MsgRepayLoanResponse defines the MsgRepayLoanResponse message.
message MsgRepayLoanResponse {}

// MsgLiquidateLoan defines the MsgLiquidateLoan message.
message MsgLiquidateLoan {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  uint64 id = 2;
}

// MsgLiquidateLoanResponse defines the MsgLiquidateLoanResponse message.
message MsgLiquidateLoanResponse {}
